--- a/package.json
+++ b/package.json
@@ -8,20 +8,21 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.2"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.2",
-    "@eslint/eslintrc": "^3"
-  }
+"dependencies": {
+  "react": "^19.0.0",
+  "react-dom": "^19.0.0",
+  "next": "15.1.2",
+  "tailwindcss": "^3.4.1",
+  "postcss": "^8.4.24",
+  "autoprefixer": "^10.4.14"
+},
+"devDependencies": {
+  "typescript": "^5",
+  "@types/node": "^20",
+  "@types/react": "^19",
+  "@types/react-dom": "^19",
+  "eslint": "^9",
+  "eslint-config-next": "15.1.2",
+  "@eslint/eslintrc": "^3"
+}
 }
